# grafast-py

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_nplus1.py  soak.py  soak_core.py
conformance/: __init__.py  conftest.py
examples/: demo_schema.py  models.py  pg_blog.py  plan_blog.py  poly_demo.py  poly_schema.py  seed.py
scripts/: fetch_conformance.py  venv33.sh
src/grafast_py/: __init__.py  _compat.py  bubble.py  cache.py  completion.py  config.py  constraints.py  context.py  core_steps.py  dag.py  entry.py  execute.py  incremental.py  plan.py  schema.py  step_model.py  steps.py
src/grafast_py/pg/: __init__.py  codecs.py  conditions.py  connection.py  cursor.py  customize.py  engine.py  executor.py  from_sqlalchemy.py  inline.py  mutations.py  ordering.py  pagination.py  placeholders.py  resource.py  steps.py  union.py
tests/: __init__.py  conftest.py  test_batching.py  test_batching_independent_verify.py  test_bench_nplus1.py  test_cache_config.py  test_cache_context_isolation.py  test_cache_request_constraints.py  test_compat.py  test_constraint_keyed_cache.py  test_core_steps.py  test_dag_dedup.py  test_dag_optimize.py  test_from_sqlalchemy.py  test_function_seam.py  test_generic_steps.py  test_hardening.py  test_hoist.py  test_incremental.py  test_inline_config.py  test_inline_extract.py  test_inline_finalize.py  test_inline_lateral.py  test_inline_optimize.py  test_inline_plan_flag.py  test_inline_predicate.py  test_lifecycle_detachment.py  test_optimize_substrate.py  test_pg_aggregates.py  test_pg_codecs.py  test_pg_composite_keys.py  test_pg_computed.py  test_pg_conditions.py  test_pg_datasource.py  test_pg_inline_suite_equivalence.py  test_pg_inlining.py  test_pg_keyset.py  test_pg_mutations.py  test_pg_ordering.py  test_pg_pagination.py  (+23 more)
tests/differential/: README.md  corpus.py  harness.py  test_differential.py
tests/differential/node/: corpus.mjs  harness.mjs  package-lock.json  package.json
